<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorAccent">
    <Button
        android:id="@+id/btn_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_button_text"
        android:background="@color/colorPrimaryDark"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_id_tv"/>
    <EditText
        android:id="@+id/paramID_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_getParam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/getParam_button_text"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"/>
    <Button
        android:id="@+id/btn_postActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postActivity_button_text"
        android:background="@color/colorPrimaryDark"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"/>
</LinearLayout>