<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".DetailActivity"
    android:background="@color/colorAccent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/detail_user_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id_field_text"/>
        <TextView
            android:id="@+id/detail_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/detail_user_id_text"
            android:layout_marginStart="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/detail_post_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_id_field_text"/>
        <TextView
            android:id="@+id/detail_post_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/detail_post_id_text"
            android:layout_marginStart="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/detail_post_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_title_field_text"/>
        <TextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/detail_post_title_text"
            android:layout_marginStart="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/detail_post_body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_body_field_text"/>
        <TextView
            android:id="@+id/detail_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/detail_post_body_text"
            android:layout_marginStart="5dp"/>
    </RelativeLayout>
</LinearLayout>